# ninja-validator

./: .dockerignore  .env.example  .gitignore  README.md  README.md.old  compose.yaml  pyproject.toml  start_pool_manager.sh  start_validator.sh
.github/workflows/: ruff.yml
deploy/: README.md
deploy/db/: 00_init.sh  postgresql.conf
deploy/migrate/: Dockerfile  alembic.ini
deploy/nginx/: ninja66.conf
deploy/sandbox/: Dockerfile
deploy/worker/: Dockerfile  benchmark-entrypoint.sh
docs/diagrams/: db-chain-watcher.mmd  db-duel-resolver.mmd  db-judge.mmd  db-task-generator.mmd  db-task-screener.mmd  db-task-solver.mmd  duel-lifecycle.mmd  erd.mmd  loop-chain-watcher.mmd  loop-duel-resolver.mmd  loop-judge.mmd  loop-task-generator.mmd  loop-task-screener.mmd  loop-task-solver.mmd  puppeteer-config.json  render.sh  (+3 more)
scripts/: batch_duel.py  check_github_quota.py  sample_commit.py  solve_one.py
src/: cli.py  config.py  openrouter_client.py  private_submission.py  r2.py  task_pool_manager.py  validate.py  validator_state_io.py
tests/: test_batch_duel.py  test_bittensor.py  test_compose.py  test_dashboard_public.py  test_db_duel_resolver.py  test_db_generator.py  test_db_judge.py  test_db_qualification.py  test_db_schema.py  test_db_solver.py  test_db_task_screening.py  test_duel.py  test_duel_resolver_worker.py  test_dummy_llm.py  test_env.py  test_env_prune.py  test_fingerprint.py  test_github.py  test_github_promotion.py  test_hf_archiver.py  test_huggingface.py  test_judge_telemetry.py  test_judging.py  test_openrouter_client.py  test_pools.py  test_private_submission.py  test_proxy.py  test_r2_public_sanitization.py  test_sandbox.py  test_solver_config.py  test_solver_loop.py  test_submission_security_qualification.py  test_task_generation.py  test_task_generator.py  test_task_screener.py  test_task_screening.py  test_taskgen.py  test_token_efficiency.py  test_validate_reference_scoring.py  test_validate_state_recovery.py  (+4 more)
(+166 files in other folders)
