[project]
name = "tau"
version = "0.1.0"
description = "Validator middleware and workers (db seam, chain watcher, judge)."
authors = [
    { name = "jan-Inasi", email = "ignacymajkusiak@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "axiom-py>=0.12.0",
    "bittensor>=9.0",
    "docker>=7.1",
    "httpx>=0.28.1",
    "psycopg[binary]==3.2.9",
    # [asyncio] pulls greenlet, required by SQLAlchemy's async engine (GeneratorDb).
    "sqlalchemy[asyncio]==2.0.41",
]

[project.optional-dependencies]
# Alembic runs only in the migration image (deploy/migrate), not the workers.
migrate = ["alembic==1.16.1"]
# Empty per-worker placeholders: all worker deps are core, but each EXTRA build-arg
# (deploy/worker/Dockerfile) still needs a matching extra to resolve.
bittensor = []
judge = []
task-generator = []
duel-resolver = []
qualification = []
weight-setter = []
task-solver = []

[project.scripts]
# Worker entrypoints: each maps to tau.workers.<name>:main. The deploy/worker
# image runs one of these via its WORKER build-arg. The modules land later.
chain-watcher = "tau.workers.chain_watcher:main"
judge-worker = "tau.workers.judge:main"
task-generator = "tau.workers.task_generator:main"
qualification-worker = "tau.workers.qualification:main"
duel-resolver = "tau.workers.duel_resolver:main"
task-solver = "tau.workers.task_solver:main"
weight-setter = "tau.workers.weight_setter:main"
tau-prune-disabled-upstreams = "tau.proxy.env_prune:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
# Treat `async def test_*` as coroutines automatically (no per-test marker).
# Plain sync tests that call asyncio.run(...) are unaffected.
asyncio_mode = "auto"
